src/main/java/com/example/Demo/errors/exception/users/UsernameNotFoundException.java
package com.example.Demo.errors.exception.users;

public class UsernameNotFoundException extends RuntimeException {
    public UsernameNotFoundException(String message) {
        super(message);
    }
}
